# guca-evolution-lab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_evo.sh  run_evo_exp10.sh  run_evo_exp11.sh  run_evo_quad.sh  run_evo_quad_0.sh  run_evo_quad_1.sh  run_evo_quad_2.sh  run_evo_quad_3.sh  run_evo_small.sh  run_evo_tri_baseline.sh  run_evo_tri_exp04.sh  run_gum.sh
.github/ISSUE_TEMPLATE/: task.md
configs/: exp003.04.yaml  exp003.06.yaml  exp003.07.yaml  ga.yaml  trimesh_baseline.yaml
configs/phase01/: exp003.01.yaml  exp003.02.yaml  exp003.03.yaml  exp003.05.yaml  exp003.08.yaml  exp003.09.yaml  exp003.10.yaml  exp003.11.yaml
configs/quadmesh_phase01/: exp001.yaml  exp002.yaml  exp003.yaml  exp004.yaml
configs/trimesh_phase01/: exp003.02.yaml  exp003.03.yaml  exp003.04.yaml  exp003.05.yaml  exp003.06.yaml  (+4 more)
docs/: INSTALL.md  PLAN.md  codebook.md
examples/: hirsute_circle_genom.yaml  single_run_nearest.yaml
scripts/: convert_legacy_xml_genes.py  convert_legacy_xml_genes.sh  convert_m1_json_to_yaml.py  freeze_expected.py  m1_genomes_quick_update.sh  run_all_examples.sh
src/: guca_engine.py  gum_graph.py
tests/: test_core_minimal.py  test_fitness_genome_len_bonus.py  test_fitness_meshes.py  test_fitness_planar_basic.py  test_graph_summary.py  test_m1_genomes.py  test_planar_shell_pies.py  test_selection_weights.py  test_vis_png_smoke.py
tools/: debug_draw_png.py  planarity_minimal_faces.py  sanity_check_evolution.py  sanity_check_fitness_mesh.py  sanity_check_meshes.py
(+89 files in other folders)
