[project]
name = "guca-evolution-lab"
version = "0.1.0"
description = "Graph Unfolding Cellular Automata — Evolution Lab (core GUM engine + CLI)"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F"]
ignore = []

